tests/snapshots/snapshots__pipeline@fip_callee.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/fip_callee.pr
---
== tokens ==
VOpen Fip Fn Ident("use_it") LParen Ident("x") RParen Eq Ident("helper") LParen Ident("x") RParen VSemi Fbip Fn Ident("helper") LParen Ident("x") RParen Eq Ident("x") VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "use_it",
            params: [
                Param {
                    name: "x",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "helper",
                        ),
                        span: 406..412,
                    },
                    [
                        Spanned {
                            node: Var(
                                "x",
                            ),
                            span: 413..414,
                        },
                    ],
                ),
                span: 406..415,
            },
            wheres: [],
            fip: Fip(
                0,
            ),
            span: 387..415,
        },
        Decl {
            name: "helper",
            params: [
                Param {
                    name: "x",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Var(
                    "x",
                ),
                span: 437..438,
            },
            wheres: [],
            fip: Fbip(
                0,
            ),
            span: 417..438,
        },
    ],
}

== types ==
use_it : forall a. (a) -> a
helper : forall a. (a) -> a

== core (cbpv) ==
fn use_it(x) =
  return x to t@0
  helper(t@0)
fn helper(x) =
  return x

== fip ==
[E6079] Type Error: usage check `fip` failed for function `use_it`: linearity is not closed over its call tree: call to `helper` receives an owned value but `helper` carries no linearity certificate; certify `helper` (`@ linear` or `fip`)
   ╭─[ <source>:6:1 ]
   │
 6 │ fip fn use_it(x) = helper(x)
   │ ──────────────┬─────────────  
   │               ╰─────────────── usage check `fip` failed for function `use_it`: linearity is not closed over its call tree: call to `helper` receives an owned value but `helper` carries no linearity certificate; certify `helper` (`@ linear` or `fip`)
───╯
