tests/snapshots/snapshots__pipeline@fip_dup.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/fip_dup.pr
---
== tokens ==
VOpen Type UIdent("Lst") Eq UIdent("Nil") Bar UIdent("Cons") LParen KwInt Comma UIdent("Lst") RParen VSemi Fip Fn Ident("use_twice") LParen Ident("xs") RParen Eq VOpen Match Ident("xs") Of VOpen LBracket RBracket FatArrow Ident("xs") VSemi Ident("h") ColonColon Ident("t") FatArrow Ident("xs") VClose VClose VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Lst",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Nil",
                    args: [],
                    fields: None,
                    span: 403..406,
                },
                Ctor {
                    name: "Cons",
                    args: [
                        Int,
                        Con(
                            "Lst",
                            [],
                        ),
                    ],
                    fields: None,
                    span: 409..413,
                },
            ],
            deriving: [],
            newtype: false,
            span: 392..423,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "use_twice",
            params: [
                Param {
                    name: "xs",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "xs",
                        ),
                        span: 456..458,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Nil",
                                    [],
                                ),
                                span: 466..468,
                            },
                            body: Spanned {
                                node: Var(
                                    "xs",
                                ),
                                span: 472..474,
                            },
                        },
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Cons",
                                    [
                                        Spanned {
                                            node: Var(
                                                "h",
                                            ),
                                            span: 479..480,
                                        },
                                        Spanned {
                                            node: Var(
                                                "t",
                                            ),
                                            span: 484..485,
                                        },
                                    ],
                                ),
                                span: 479..485,
                            },
                            body: Spanned {
                                node: Var(
                                    "xs",
                                ),
                                span: 489..491,
                            },
                        },
                    ],
                ),
                span: 450..491,
            },
            wheres: [],
            fip: Fip(
                0,
            ),
            span: 425..491,
        },
    ],
}

== types ==
use_twice : (Lst) -> Lst

== core (cbpv) ==
fn use_twice(xs) =
  return xs to t@0
  case t@0 of
    Nil =>
      return xs
    Cons(h, t) =>
      return xs

== fip ==
[E6078] Type Error: usage check `fip` failed for function `use_twice`: is not linear (duplicates a value)
    ╭─[ <source>:8:1 ]
    │
  8 │ ╭─▶ fip fn use_twice(xs) =
    ┆ ┆   
 11 │ ├─▶     h :: t => xs
    │ │                      
    │ ╰────────────────────── usage check `fip` failed for function `use_twice`: is not linear (duplicates a value)
────╯
