tests/snapshots/snapshots__pipeline@float_show.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/float_show.pr
---
== tokens ==
VOpen Fn Ident("main") LParen RParen Eq VOpen Ident("println") LParen Float(0.1) Plus Float(0.2) RParen VSemi Ident("println") LParen Float(10.0) Slash Float(3.0) RParen VSemi Ident("println") LParen Float(100.0) Star Float(1.0) RParen VSemi Ident("println") LParen Float(1e16) RParen VSemi Ident("println") LParen Float(1e-5) RParen VSemi Ident("println") LParen Float(0.0) Minus Float(2.5) RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "_",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 241..248,
                            },
                            [
                                Spanned {
                                    node: Bin(
                                        Add,
                                        Spanned {
                                            node: Float(
                                                0.1,
                                            ),
                                            span: 249..252,
                                        },
                                        Spanned {
                                            node: Float(
                                                0.2,
                                            ),
                                            span: 255..258,
                                        },
                                    ),
                                    span: 249..258,
                                },
                            ],
                        ),
                        span: 241..259,
                    },
                    Spanned {
                        node: Let(
                            "_",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "println",
                                        ),
                                        span: 262..269,
                                    },
                                    [
                                        Spanned {
                                            node: Bin(
                                                Div,
                                                Spanned {
                                                    node: Float(
                                                        10.0,
                                                    ),
                                                    span: 270..274,
                                                },
                                                Spanned {
                                                    node: Float(
                                                        3.0,
                                                    ),
                                                    span: 277..280,
                                                },
                                            ),
                                            span: 270..280,
                                        },
                                    ],
                                ),
                                span: 262..281,
                            },
                            Spanned {
                                node: Let(
                                    "_",
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "println",
                                                ),
                                                span: 284..291,
                                            },
                                            [
                                                Spanned {
                                                    node: Bin(
                                                        Mul,
                                                        Spanned {
                                                            node: Float(
                                                                100.0,
                                                            ),
                                                            span: 292..297,
                                                        },
                                                        Spanned {
                                                            node: Float(
                                                                1.0,
                                                            ),
                                                            span: 300..303,
                                                        },
                                                    ),
                                                    span: 292..303,
                                                },
                                            ],
                                        ),
                                        span: 284..304,
                                    },
                                    Spanned {
                                        node: Let(
                                            "_",
                                            Spanned {
                                                node: Call(
                                                    Spanned {
                                                        node: Var(
                                                            "println",
                                                        ),
                                                        span: 307..314,
                                                    },
                                                    [
                                                        Spanned {
                                                            node: Float(
                                                                1e16,
                                                            ),
                                                            span: 315..334,
                                                        },
                                                    ],
                                                ),
                                                span: 307..335,
                                            },
                                            Spanned {
                                                node: Let(
                                                    "_",
                                                    Spanned {
                                                        node: Call(
                                                            Spanned {
                                                                node: Var(
                                                                    "println",
                                                                ),
                                                                span: 338..345,
                                                            },
                                                            [
                                                                Spanned {
                                                                    node: Float(
                                                                        1e-5,
                                                                    ),
                                                                    span: 346..353,
                                                                },
                                                            ],
                                                        ),
                                                        span: 338..354,
                                                    },
                                                    Spanned {
                                                        node: Call(
                                                            Spanned {
                                                                node: Var(
                                                                    "println",
                                                                ),
                                                                span: 357..364,
                                                            },
                                                            [
                                                                Spanned {
                                                                    node: Bin(
                                                                        Sub,
                                                                        Spanned {
                                                                            node: Float(
                                                                                0.0,
                                                                            ),
                                                                            span: 365..368,
                                                                        },
                                                                        Spanned {
                                                                            node: Float(
                                                                                2.5,
                                                                            ),
                                                                            span: 371..374,
                                                                        },
                                                                    ),
                                                                    span: 365..374,
                                                                },
                                                            ],
                                                        ),
                                                        span: 357..375,
                                                    },
                                                ),
                                                span: 338..375,
                                            },
                                        ),
                                        span: 307..375,
                                    },
                                ),
                                span: 284..375,
                            },
                        ),
                        span: 262..375,
                    },
                ),
                span: 241..375,
            },
            wheres: [],
            span: 227..375,
        },
    ],
}

== types ==
main : () -> Unit ! {IO}

== core (cbpv) ==
fn main() =
  return 0.1 to t@0
  return 0.2 to t@1
  t@0 +. t@1 to t@2
  printf t@2 to t@3
  print_nl
  return 10 to t@4
  return 3 to t@5
  t@4 /. t@5 to t@6
  printf t@6 to t@7
  print_nl
  return 100 to t@8
  return 1 to t@9
  t@8 *. t@9 to t@10
  printf t@10 to t@11
  print_nl
  return 10000000000000000 to t@12
  printf t@12 to t@13
  print_nl
  return 0.00001 to t@14
  printf t@14 to t@15
  print_nl
  return 0 to t@16
  return 2.5 to t@17
  t@16 -. t@17 to t@18
  printf t@18 to t@19
  print_nl

== fbip (rc) ==
fn main() =
  return 0.1 to t@0
  return 0.2 to t@1
  t@0 +. t@1 to t@2
  printf t@2 to t@3
  drop t@3
  print_nl
  drop _
  return 10 to t@4
  return 3 to t@5
  t@4 /. t@5 to t@6
  printf t@6 to t@7
  drop t@7
  print_nl
  drop _
  return 100 to t@8
  return 1 to t@9
  t@8 *. t@9 to t@10
  printf t@10 to t@11
  drop t@11
  print_nl
  drop _
  return 10000000000000000 to t@12
  printf t@12 to t@13
  drop t@13
  print_nl
  drop _
  return 0.00001 to t@14
  printf t@14 to t@15
  drop t@15
  print_nl
  drop _
  return 0 to t@16
  return 2.5 to t@17
  t@16 -. t@17 to t@18
  printf t@18 to t@19
  drop t@19
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [705 x i8] c"scheme  prism-core-hash-v2\0Abundle  eb54ebe15adbea0ac0aa25991c8d36fa47ff5a51c77cfcc0940a6f0f5bdff40b\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:eb54ebe15adbea0ac0aa25991c8d36fa47ff5a51c77cfcc0940a6f0f5bdff40b\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  6bd78f57b8fc70fba80844780d5e86d9cd7124f79253b9f89c5ac2080bb2bf63  main\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [775 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  eb54ebe15adbea0ac0aa25991c8d36fa47ff5a51c77cfcc0940a6f0f5bdff40b\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:eb54ebe15adbea0ac0aa25991c8d36fa47ff5a51c77cfcc0940a6f0f5bdff40b\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 6bd78f57b8fc70fba80844780d5e86d9cd7124f79253b9f89c5ac2080bb2bf63 main arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"6bd78f57b8fc70fba80844780d5e86d9cd7124f79253b9f89c5ac2080bb2bf63\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t2 = call i64 @prism_box(i64 4599075939470750516)
  %t3 = call i64 @prism_unbox(i64 %t2)
  call void @prism_print_float(i64 %t3)
  call void @prism_rc_dec(i64 %t2)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  call void @prism_rc_dec(i64 0)
  %t10 = call i64 @prism_box(i64 4614688418178968235)
  %t11 = call i64 @prism_unbox(i64 %t10)
  call void @prism_print_float(i64 %t11)
  call void @prism_rc_dec(i64 %t10)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  call void @prism_rc_dec(i64 0)
  %t18 = call i64 @prism_box(i64 4636737291354636288)
  %t19 = call i64 @prism_unbox(i64 %t18)
  call void @prism_print_float(i64 %t19)
  call void @prism_rc_dec(i64 %t18)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  call void @prism_rc_dec(i64 0)
  %t26 = call i64 @prism_box(i64 4846369599423283200)
  %t27 = call i64 @prism_unbox(i64 %t26)
  call void @prism_print_float(i64 %t27)
  call void @prism_rc_dec(i64 %t26)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  call void @prism_rc_dec(i64 0)
  %t34 = call i64 @prism_box(i64 4532020583610935537)
  %t35 = call i64 @prism_unbox(i64 %t34)
  call void @prism_print_float(i64 %t35)
  call void @prism_rc_dec(i64 %t34)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  call void @prism_rc_dec(i64 0)
  %t42 = call i64 @prism_box(i64 -4610560118520545280)
  %t43 = call i64 @prism_unbox(i64 %t42)
  call void @prism_print_float(i64 %t43)
  call void @prism_rc_dec(i64 %t42)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare i64 @prism_box(i64) #0

; Function Attrs: nounwind
declare i64 @prism_unbox(i64) #0

; Function Attrs: nounwind
declare void @prism_print_float(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

attributes #0 = { nounwind }

== run ==
output: [0.30000000000000004, 3.3333333333333335, 100, 1e+16, 1e-05, -2.5]
result: ()
